--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,5 +1,6 @@
 header {
     display: grid;
+    grid-area: header;
     justify-content: center;
     width: 100%;
     height: fit-content;
