--- a/src/sass/components/_index.scss
+++ b/src/sass/components/_index.scss
@@ -1,16 +1,26 @@
 html, body {
     position: relative;
 }
+
+html {
+    height: 100%;
+}
   
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    grid-template-areas:
+    "header"
+    "main"
+    "footer";
     margin: 0;
     padding: 0;
     user-select: none;
     overflow: hidden;
     background-color: $headerFooterBackground;
-    height: 100%;
+    min-height: 100%;
     @media screen and (max-width: 769px) {
         overflow-x: hidden;
         overflow-y: auto;
@@ -25,15 +35,15 @@ a {
 
 main {
     display: grid;
-    height: calc(100vh - 30px - 30px - 3%);
+    grid-area: main;
+    // height: calc(100vh - 30px - 30px - 3%);
     overflow: hidden;
-    padding-top: 2%;
+    // padding-top: 2%;
     background: rgb(20,10,10);
     background: linear-gradient(210deg, rgba(20,10,10,1) 0%, rgba(11,126,166,1) 100%);
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 769px) {
         overflow-y: auto;
         overflow-x: hidden;
-        min-height: calc(100vh - 30px - 25px - 3%);
     }
 }
 
